# xinput-dinput-proxy

./: .gitignore  CMakeLists.txt  CMakeLists_test.txt  COMMIT_STYLE.txt  README.md  build.bat  build.ps1  config.ini  run_tests.bat  run_tests.ps1  spec.txt  test_build.cpp
include/core/: device_manager.hpp  input_capture.hpp  translation_layer.hpp  virtual_device_emulator.hpp
include/ui/: dashboard.hpp
include/utils/: config_manager.hpp  hidhide_controller.hpp  logger.hpp  threading.hpp  timing.hpp
resources/: app.manifest  app.rc
src/: main.cpp
src/core/: device_manager.cpp  input_capture.cpp  translation_layer.cpp  virtual_device_emulator.cpp
src/ui/: dashboard.cpp
src/utils/: config_manager.cpp  hidhide_controller.cpp  threading.cpp  timing.cpp
tests/: test_config_manager.cpp  test_stick_drift_mitigation.cpp  test_translation_layer.cpp
